JumpScript/tests/baselines/reference/exportSameNameFuncVar.errors.txt
tests/cases/compiler/exportSameNameFuncVar.jump(1,12): error TS2300: Duplicate identifier 'a'.
tests/cases/compiler/exportSameNameFuncVar.jump(2,17): error TS2300: Duplicate identifier 'a'.


==== tests/cases/compiler/exportSameNameFuncVar.jump (2 errors) ====
    export var a = 10;
               ~
!!! error TS2300: Duplicate identifier 'a'.
    export function a() {
                    ~
!!! error TS2300: Duplicate identifier 'a'.
    }